unibase2n.h

/* Code generated by cmd/cgo; DO NOT EDIT. */

/* package command-line-arguments */


#line 1 "cgo-builtin-export-prolog"

#include <stddef.h>

#ifndef GO_CGO_EXPORT_PROLOGUE_H
#define GO_CGO_EXPORT_PROLOGUE_H

#ifndef GO_CGO_GOSTRING_TYPEDEF
typedef struct { const char *p; ptrdiff_t n; } _GoString_;
#endif

#endif

/* Start of preamble from import "C" comments.  */




/* End of preamble from import "C" comments.  */


/* Start of boilerplate cgo prologue.  */
#line 1 "cgo-gcc-export-header-prolog"

#ifndef GO_CGO_PROLOGUE_H
#define GO_CGO_PROLOGUE_H

typedef signed char GoInt8;
typedef unsigned char GoUint8;
typedef short GoInt16;
typedef unsigned short GoUint16;
typedef int GoInt32;
typedef unsigned int GoUint32;
typedef long long GoInt64;
typedef unsigned long long GoUint64;
typedef GoInt64 GoInt;
typedef GoUint64 GoUint;
typedef size_t GoUintptr;
typedef float GoFloat32;
typedef double GoFloat64;
#ifdef _MSC_VER
#include <complex.h>
typedef _Fcomplex GoComplex64;
typedef _Dcomplex GoComplex128;
#else
typedef float _Complex GoComplex64;
typedef double _Complex GoComplex128;
#endif

/*
  static assertion to make sure the file is being used on architecture
  at least with matching size of GoInt.
*/
typedef char _check_for_64_bit_pointer_matching_GoInt[sizeof(void*)==64/8 ? 1:-1];

#ifndef GO_CGO_GOSTRING_TYPEDEF
typedef _GoString_ GoString;
#endif
typedef void *GoMap;
typedef void *GoChan;
typedef struct { void *t; void *v; } GoInterface;
typedef struct { void *data; GoInt len; GoInt cap; } GoSlice;

#endif

/* End of boilerplate cgo prologue.  */

#ifdef __cplusplus
extern "C" {
#endif

extern GoInt EncodeBase8192(GoSlice inp, GoSlice out);
extern void EncodeBase8192Into(GoSlice inp, GoSlice out);
extern void EncodeBase8192Len(GoInt size, GoInt* out, GoInt* offset);
extern GoInt DecodeBase8192(GoSlice inp, GoSlice out);
extern void DecodeBase8192Into(GoSlice inp, GoSlice out);
extern void DecodeBase8192Len(GoInt size, GoInt offset, GoInt* out);
extern GoInt EncodeBase4096(GoSlice inp, GoSlice out);
extern void EncodeBase4096Into(GoSlice inp, GoSlice out);
extern void EncodeBase4096Len(GoInt size, GoInt* out, GoInt* offset);
extern GoInt DecodeBase4096(GoSlice inp, GoSlice out);
extern void DecodeBase4096Into(GoSlice inp, GoSlice out);
extern void DecodeBase4096Len(GoInt size, GoInt offset, GoInt* out);
extern GoInt EncodeBase512(GoSlice inp, GoSlice out);
extern void EncodeBase512Into(GoSlice inp, GoSlice out);
extern void EncodeBase512Len(GoInt size, GoInt* out, GoInt* offset);
extern GoInt DecodeBase512(GoSlice inp, GoSlice out);
extern void DecodeBase512Into(GoSlice inp, GoSlice out);
extern void DecodeBase512Len(GoInt size, GoInt offset, GoInt* out);
extern GoInt EncodeBase256(GoSlice inp, GoSlice out);
extern void EncodeBase256Into(GoSlice inp, GoSlice out);
extern void EncodeBase256Len(GoInt size, GoInt* out, GoInt* offset);
extern GoInt DecodeBase256(GoSlice inp, GoSlice out);
extern void DecodeBase256Into(GoSlice inp, GoSlice out);
extern void DecodeBase256Len(GoInt size, GoInt offset, GoInt* out);
extern GoInt EncodeBaseMath(GoSlice inp, GoSlice out);
extern void EncodeBaseMathInto(GoSlice inp, GoSlice out);
extern void EncodeBaseMathLen(GoInt size, GoInt* out, GoInt* offset);
extern GoInt DecodeBaseMath(GoSlice inp, GoSlice out);
extern void DecodeBaseMathInto(GoSlice inp, GoSlice out);
extern void DecodeBaseMathLen(GoInt size, GoInt offset, GoInt* out);
extern GoInt EncodeBaseTanWi(GoSlice inp, GoSlice out);
extern void EncodeBaseTanWiInto(GoSlice inp, GoSlice out);
extern void EncodeBaseTanWiLen(GoInt size, GoInt* out, GoInt* offset);
extern GoInt DecodeBaseTanWi(GoSlice inp, GoSlice out);
extern void DecodeBaseTanWiInto(GoSlice inp, GoSlice out);
extern void DecodeBaseTanWiLen(GoInt size, GoInt offset, GoInt* out);
extern GoInt EncodeBase128(GoSlice inp, GoSlice out);
extern void EncodeBase128Into(GoSlice inp, GoSlice out);
extern void EncodeBase128Len(GoInt size, GoInt* out, GoInt* offset);
extern GoInt DecodeBase128(GoSlice inp, GoSlice out);
extern void DecodeBase128Into(GoSlice inp, GoSlice out);
extern void DecodeBase128Len(GoInt size, GoInt offset, GoInt* out);
extern GoInt EncodeBaseDevanagari(GoSlice inp, GoSlice out);
extern void EncodeBaseDevanagariInto(GoSlice inp, GoSlice out);
extern void EncodeBaseDevanagariLen(GoInt size, GoInt* out, GoInt* offset);
extern GoInt DecodeBaseDevanagari(GoSlice inp, GoSlice out);
extern void DecodeBaseDevanagariInto(GoSlice inp, GoSlice out);
extern void DecodeBaseDevanagariLen(GoInt size, GoInt offset, GoInt* out);
extern GoInt EncodeBase64(GoSlice inp, GoSlice out);
extern void EncodeBase64Into(GoSlice inp, GoSlice out);
extern void EncodeBase64Len(GoInt size, GoInt* out, GoInt* offset);
extern GoInt DecodeBase64(GoSlice inp, GoSlice out);
extern void DecodeBase64Into(GoSlice inp, GoSlice out);
extern void DecodeBase64Len(GoInt size, GoInt offset, GoInt* out);
extern GoInt EncodeBase64Gua(GoSlice inp, GoSlice out);
extern void EncodeBase64GuaInto(GoSlice inp, GoSlice out);
extern void EncodeBase64GuaLen(GoInt size, GoInt* out, GoInt* offset);
extern GoInt DecodeBase64Gua(GoSlice inp, GoSlice out);
extern void DecodeBase64GuaInto(GoSlice inp, GoSlice out);
extern void DecodeBase64GuaLen(GoInt size, GoInt offset, GoInt* out);
extern GoInt EncodeBaseRune(GoSlice inp, GoSlice out);
extern void EncodeBaseRuneInto(GoSlice inp, GoSlice out);
extern void EncodeBaseRuneLen(GoInt size, GoInt* out, GoInt* offset);
extern GoInt DecodeBaseRune(GoSlice inp, GoSlice out);
extern void DecodeBaseRuneInto(GoSlice inp, GoSlice out);
extern void DecodeBaseRuneLen(GoInt size, GoInt offset, GoInt* out);
extern GoInt EncodeBaseMongolian(GoSlice inp, GoSlice out);
extern void EncodeBaseMongolianInto(GoSlice inp, GoSlice out);
extern void EncodeBaseMongolianLen(GoInt size, GoInt* out, GoInt* offset);
extern GoInt DecodeBaseMongolian(GoSlice inp, GoSlice out);
extern void DecodeBaseMongolianInto(GoSlice inp, GoSlice out);
extern void DecodeBaseMongolianLen(GoInt size, GoInt offset, GoInt* out);
extern GoInt EncodeBaseBox(GoSlice inp, GoSlice out);
extern void EncodeBaseBoxInto(GoSlice inp, GoSlice out);
extern void EncodeBaseBoxLen(GoInt size, GoInt* out, GoInt* offset);
extern GoInt DecodeBaseBox(GoSlice inp, GoSlice out);
extern void DecodeBaseBoxInto(GoSlice inp, GoSlice out);
extern void DecodeBaseBoxLen(GoInt size, GoInt offset, GoInt* out);
extern GoInt EncodeBase32(GoSlice inp, GoSlice out);
extern void EncodeBase32Into(GoSlice inp, GoSlice out);
extern void EncodeBase32Len(GoInt size, GoInt* out, GoInt* offset);
extern GoInt DecodeBase32(GoSlice inp, GoSlice out);
extern void DecodeBase32Into(GoSlice inp, GoSlice out);
extern void DecodeBase32Len(GoInt size, GoInt offset, GoInt* out);
extern GoInt EncodeBaseTibetan(GoSlice inp, GoSlice out);
extern void EncodeBaseTibetanInto(GoSlice inp, GoSlice out);
extern void EncodeBaseTibetanLen(GoInt size, GoInt* out, GoInt* offset);
extern GoInt DecodeBaseTibetan(GoSlice inp, GoSlice out);
extern void DecodeBaseTibetanInto(GoSlice inp, GoSlice out);
extern void DecodeBaseTibetanLen(GoInt size, GoInt offset, GoInt* out);
extern GoInt EncodeBase16(GoSlice inp, GoSlice out);
extern void EncodeBase16Into(GoSlice inp, GoSlice out);
extern void EncodeBase16Len(GoInt size, GoInt* out, GoInt* offset);
extern GoInt DecodeBase16(GoSlice inp, GoSlice out);
extern void DecodeBase16Into(GoSlice inp, GoSlice out);
extern void DecodeBase16Len(GoInt size, GoInt offset, GoInt* out);
extern GoInt EncodeBaseBuginese(GoSlice inp, GoSlice out);
extern void EncodeBaseBugineseInto(GoSlice inp, GoSlice out);
extern void EncodeBaseBugineseLen(GoInt size, GoInt* out, GoInt* offset);
extern GoInt DecodeBaseBuginese(GoSlice inp, GoSlice out);
extern void DecodeBaseBugineseInto(GoSlice inp, GoSlice out);
extern void DecodeBaseBugineseLen(GoInt size, GoInt offset, GoInt* out);
extern GoInt EncodeBase8Gua(GoSlice inp, GoSlice out);
extern void EncodeBase8GuaInto(GoSlice inp, GoSlice out);
extern void EncodeBase8GuaLen(GoInt size, GoInt* out, GoInt* offset);
extern GoInt DecodeBase8Gua(GoSlice inp, GoSlice out);
extern void DecodeBase8GuaInto(GoSlice inp, GoSlice out);
extern void DecodeBase8GuaLen(GoInt size, GoInt offset, GoInt* out);

#ifdef __cplusplus
}
#endif